services/weave-gitops/4.0.36/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-sslip
  namespace: ${releaseNamespace}
spec:
  redirectRegex:
    regex: ^https:\/\/([^\/]+)\/weave-gitops\/?(.*)
    replacement: "https://weave-gitops.$1.sslip.io/"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: weave-gitops-fqdn-route
  namespace: ${releaseNamespace}
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostRegexp(`weave-gitops.{subdomain:[0-9.]+}.sslip.io`)
      # syntax: v2
      kind: Rule
      services:
        - name: weave-gitops-weave-gitops
          port: 9001
